Implement addition log events filters
