# v2/api/archive-query-service/v2/query_services.openapi.yaml
@@ -50,28 +50,49 @@ paths:
         \ explicitly stated otherwise.\n If multiple values are used they need to\
         \ be comma separated. See below for allowed properties.\n Many fields are\
         \ conditional per log type. Some fields are universal and present for all\
-        \ logs.\n\n #### Include filter properties\n\n | Name            |  Type \
-        \  | Format   | Description                                             |\n\
-        \ |-----------------|--------|-----------|---------------------------------------------------------|\n\
-        \ | source          | string | 60 character identity, up to 5 | The source\
-        \ identity. (conditional) |\n | destination     | string | 60 character identity,\
-        \ up to 5 | The destination identity. (conditional) |\n | transactionHash\
-        \ | string | Hash     | Hash of the related transaction. (conditional)   \
-        \        |\n | tickNumber      | string | Numeric  | The tick the log belongs\
-        \ to. (universal)                 |\n | logId           | string | Numeric\
-        \  | Index of the log within the tick. Should be unique per epoch. (universal)\
-        \ |\n | logType         | string | Numeric, up to 5 | The type of the log.\
-        \ (universal)                 |\n | categories      | string | Numeric, up\
-        \ to 5 | Log category. (conditional)                      |\n\n The following\
-        \ categories are theoretically supported at the moment. Not all are available\
-        \ in the archive.\n See log data consumer code for more details:\n\n | Name\
-        \          | Category |\n |---------------|----------|\n | \"SC_INITIALIZE_TX\"\
-        \   | 1 |\n | \"SC_BEGIN_EPOCH_TX\"  | 2 |\n | \"SC_BEGIN_TICK_TX\"   | 3\
-        \ |\n | \"SC_END_TICK_TX\"     | 4 |\n | \"SC_END_EPOCH_TX\"    | 5 |\n |\
-        \ \"SC_NOTIFICATION_TX\" | 6 |\n\n #### Exclude filter properties\n\n It is\
-        \ allowed to use exclude filters together with should filters.\n\n | Name\
-        \            |  Type   | Format   | Description                          \
-        \                   |\n |-----------------|---------|----------|---------------------------------------------------------|\n\
+        \ logs.\n\n #### Include filter properties\n\n | Name                  | \
+        \ Type  |  Format                        | Description                   \
+        \                                            |\n |-----------------------|--------|--------------------------------|---------------------------------------------------------------------------|\n\
+        \ | source                | string | 60 character identity, up to 5 | The\
+        \ source identity. (conditional)                                        |\n\
+        \ | destination           | string | 60 character identity, up to 5 | The\
+        \ destination identity. (conditional)                                   |\n\
+        \ | transactionHash       | string | Hash                           | Hash\
+        \ of the related transaction. (conditional)                            |\n\
+        \ | tickNumber            | string | Numeric                        | The\
+        \ tick the log belongs to. (universal)                                  |\n\
+        \ | logId                 | string | Numeric                        | Index\
+        \ of the log within the tick. Should be unique per epoch. (universal) |\n\
+        \ | logType               | string | Numeric, up to 5               | The\
+        \ type of the log. (universal)                                          |\n\
+        \ | categories            | string | Numeric, up to 5               | Log\
+        \ category. (conditional)                                               |\n\
+        \ | epoch                 | string | Numeric (uint32)               | The\
+        \ epoch. (universal)                                                    |\n\
+        \ | assetName             | string | String, max 7 chars            | Name\
+        \ of the asset. (conditional)                                          |\n\
+        \ | assetIssuer           | string | 60 character identity          | Issuer\
+        \ of the asset. (conditional)                                        |\n |\
+        \ managingContractIndex | string | Numeric (uint64)               | Managing\
+        \ contract index. (conditional)                                    |\n | contractIndex\
+        \         | string | Numeric (uint64)               | Contract index. (conditional)\
+        \                                             |\n | contractMessageType  \
+        \ | string | Numeric (uint64)               | Contract message type. (conditional)\
+        \                                      |\n | deductedAmount        | string\
+        \ | Numeric (uint64)               | Deducted amount. (conditional)      \
+        \                                      |\n | remainingAmount       | string\
+        \ | Numeric (int64)                | Remaining amount. (conditional)     \
+        \                                      |\n | customMessage         | string\
+        \ | Numeric (uint64)               | Custom message. (conditional)       \
+        \                                      |\n\n The following categories are\
+        \ theoretically supported at the moment. Not all are available in the archive.\n\
+        \ See log data consumer code for more details:\n\n | Name          | Category\
+        \ |\n |---------------|----------|\n | \"SC_INITIALIZE_TX\"   | 1 |\n | \"\
+        SC_BEGIN_EPOCH_TX\"  | 2 |\n | \"SC_BEGIN_TICK_TX\"   | 3 |\n | \"SC_END_TICK_TX\"\
+        \     | 4 |\n | \"SC_END_EPOCH_TX\"    | 5 |\n | \"SC_NOTIFICATION_TX\" |\
+        \ 6 |\n\n #### Exclude filter properties\n\n It is allowed to use exclude\
+        \ filters together with should filters.\n\n | Name            |  Type   |\
+        \ Format   | Description                                             |\n |-----------------|---------|----------|---------------------------------------------------------|\n\
         \ | source      | string | 60 character identity, up to 5, comma separated.\
         \ | Only find logs with another source. |\n | destination | string | 60 character\
         \ identity, up to 5, comma separated.  | Only find logs with another destination.\
@@ -89,17 +110,23 @@ paths:
         \ numberOfShares | string | Numeric  | Find logs in the number of shares range.\
         \  |\n\n #### Range filter properties\n\n Ranges restrict the results to a\
         \ range of values by defining a maximum and/or minimum value.\n\n | Name \
-        \      | Type   | Format                                   | Description \
-        \                                |\n |------------|--------|------------------------------------------|---------------------------------------------|\n\
-        \ | amount     | string | Numeric                                  | Only\
-        \ find logs in the amount range.     |\n | numberOfShares | string | Numeric\
-        \                              | Only find logs withing the number of shares\
-        \ range. |\n | tickNumber | string | Numeric                             \
-        \     | Only find logs in the tick range.       |\n | timestamp  | string\
-        \ | Numeric (Unix Timestamp in milliseconds) | Only find logs in the time\
-        \ range.       |\n\n ### Pagination\n\n | Name   | Type   | Necessity | Description\
+        \           | Type   | Format                                   | Description\
+        \                                        |\n |-----------------|--------|------------------------------------------|----------------------------------------------------|\n\
+        \ | amount          | string | Numeric                                  |\
+        \ Only find logs in the amount range.                |\n | numberOfShares\
+        \  | string | Numeric                                  | Only find logs withing\
+        \ the number of shares range. |\n | tickNumber      | string | Numeric   \
+        \                               | Only find logs in the tick range.      \
+        \            |\n | timestamp       | string | Numeric (Unix Timestamp in milliseconds)\
+        \ | Only find logs in the time range.                  |\n | epoch       \
+        \    | string | Numeric (uint32)                         | Only find logs\
+        \ in the epoch range.                 |\n | deductedAmount  | string | Numeric\
+        \ (uint64)                         | Only find logs in the deducted amount\
+        \ range.       |\n | remainingAmount | string | Numeric (int64)          \
+        \                | Only find logs in the remaining amount range.      |\n\n\
+        \ ### Pagination\n\n | Name   | Type   | Necessity | Description         \
         \                                                                        \
-        \                 |\n |--------|--------|-----------|-----------------------------------------------------------------------------------------------------|\n\
+        \        |\n |--------|--------|-----------|-----------------------------------------------------------------------------------------------------|\n\
         \ | offset | uint32 | optional  | The offset of the first record to return.\
         \ Defaults to zero (first record). Maximum offset is 10000. |\n | size   |\
         \ uint32 | optional  | Defaults to 10. Maximum size is 1000. Zero value is\
@@ -353,6 +380,23 @@ components:
           type: string
       description: AssetOwnershipChangeData contains fields specific to asset ownership
         change events (type 2).
+    AssetOwnershipManagingContractChangeData:
+      type: object
+      properties:
+        assetName:
+          type: string
+        assetIssuer:
+          type: string
+        owner:
+          type: string
+        numberOfShares:
+          type: string
+        sourceContractIndex:
+          type: string
+        destinationContractIndex:
+          type: string
+      description: AssetOwnershipManagingContractChangeData contains fields specific
+        to asset ownership managing contract change events (type 11).
     AssetPossessionChangeData:
       type: object
       properties:
@@ -368,6 +412,25 @@ components:
           type: string
       description: AssetPossessionChangeData contains fields specific to asset possession
         change events (type 3).
+    AssetPossessionManagingContractChangeData:
+      type: object
+      properties:
+        assetName:
+          type: string
+        assetIssuer:
+          type: string
+        owner:
+          type: string
+        possessor:
+          type: string
+        numberOfShares:
+          type: string
+        sourceContractIndex:
+          type: string
+        destinationContractIndex:
+          type: string
+      description: AssetPossessionManagingContractChangeData contains fields specific
+        to asset possession managing contract change events (type 12).
     BurningData:
       type: object
       properties:
@@ -459,6 +522,10 @@ components:
           $ref: '#/components/schemas/SmartContractMessageData'
         customMessage:
           $ref: '#/components/schemas/CustomMessageData'
+        assetOwnershipManagingContractChange:
+          $ref: '#/components/schemas/AssetOwnershipManagingContractChangeData'
+        assetPossessionManagingContractChange:
+          $ref: '#/components/schemas/AssetPossessionManagingContractChangeData'
       description: Event
     GetComputorListsForEpochRequest:
       type: object
@@ -519,6 +586,10 @@ components:
           items:
             $ref: '#/components/schemas/Event'
           description: List of events that matched the search criteria.
+        validForTick:
+          type: integer
+          description: The response is valid for this tick number.
+          format: uint32
       description: GetEventsResponse
     GetLastProcessedTickResponse:
       type: object
@@ -534,6 +605,10 @@ components:
         intervalInitialTick:
           type: integer
           description: The initial tick of the current tick interval.
+          format: uint32
+        lastProcessedLogTick:
+          type: integer
+          description: The last processed tick for event logs.
           format: uint32
       description: GetLastProcessedTickResponse
     GetProcessedTickIntervalsResponse:
