# v2/api/archive-query-service/v2/query_services_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.6.0
-// - protoc             v4.23.4
+// - protoc             v6.33.1
 // source: query_services.proto
 
 package api
@@ -180,15 +180,24 @@ type ArchiveQueryServiceClient interface {
 	//
 	// #### Include filter properties
 	//
-	// | Name            |  Type   | Format   | Description                                             |
-	// |-----------------|--------|-----------|---------------------------------------------------------|
-	// | source          | string | 60 character identity, up to 5 | The source identity. (conditional) |
-	// | destination     | string | 60 character identity, up to 5 | The destination identity. (conditional) |
-	// | transactionHash | string | Hash     | Hash of the related transaction. (conditional)           |
-	// | tickNumber      | string | Numeric  | The tick the log belongs to. (universal)                 |
-	// | logId           | string | Numeric  | Index of the log within the tick. Should be unique per epoch. (universal) |
-	// | logType         | string | Numeric, up to 5 | The type of the log. (universal)                 |
-	// | categories      | string | Numeric, up to 5 | Log category. (conditional)                      |
+	// | Name                  |  Type  |  Format                        | Description                                                               |
+	// |-----------------------|--------|--------------------------------|---------------------------------------------------------------------------|
+	// | source                | string | 60 character identity, up to 5 | The source identity. (conditional)                                        |
+	// | destination           | string | 60 character identity, up to 5 | The destination identity. (conditional)                                   |
+	// | transactionHash       | string | Hash                           | Hash of the related transaction. (conditional)                            |
+	// | tickNumber            | string | Numeric                        | The tick the log belongs to. (universal)                                  |
+	// | logId                 | string | Numeric                        | Index of the log within the tick. Should be unique per epoch. (universal) |
+	// | logType               | string | Numeric, up to 5               | The type of the log. (universal)                                          |
+	// | categories            | string | Numeric, up to 5               | Log category. (conditional)                                               |
+	// | epoch                 | string | Numeric (uint32)               | The epoch. (universal)                                                    |
+	// | assetName             | string | String, max 7 chars            | Name of the asset. (conditional)                                          |
+	// | assetIssuer           | string | 60 character identity          | Issuer of the asset. (conditional)                                        |
+	// | managingContractIndex | string | Numeric (uint64)               | Managing contract index. (conditional)                                    |
+	// | contractIndex         | string | Numeric (uint64)               | Contract index. (conditional)                                             |
+	// | contractMessageType   | string | Numeric (uint64)               | Contract message type. (conditional)                                      |
+	// | deductedAmount        | string | Numeric (uint64)               | Deducted amount. (conditional)                                            |
+	// | remainingAmount       | string | Numeric (int64)                | Remaining amount. (conditional)                                           |
+	// | customMessage         | string | Numeric (uint64)               | Custom message. (conditional)                                             |
 	//
 	// The following categories are theoretically supported at the moment. Not all are available in the archive.
 	// See log data consumer code for more details:
@@ -231,12 +240,15 @@ type ArchiveQueryServiceClient interface {
 	//
 	// Ranges restrict the results to a range of values by defining a maximum and/or minimum value.
 	//
-	// | Name       | Type   | Format                                   | Description                                 |
-	// |------------|--------|------------------------------------------|---------------------------------------------|
-	// | amount     | string | Numeric                                  | Only find logs in the amount range.     |
-	// | numberOfShares | string | Numeric                              | Only find logs withing the number of shares range. |
-	// | tickNumber | string | Numeric                                  | Only find logs in the tick range.       |
-	// | timestamp  | string | Numeric (Unix Timestamp in milliseconds) | Only find logs in the time range.       |
+	// | Name            | Type   | Format                                   | Description                                        |
+	// |-----------------|--------|------------------------------------------|----------------------------------------------------|
+	// | amount          | string | Numeric                                  | Only find logs in the amount range.                |
+	// | numberOfShares  | string | Numeric                                  | Only find logs withing the number of shares range. |
+	// | tickNumber      | string | Numeric                                  | Only find logs in the tick range.                  |
+	// | timestamp       | string | Numeric (Unix Timestamp in milliseconds) | Only find logs in the time range.                  |
+	// | epoch           | string | Numeric (uint32)                         | Only find logs in the epoch range.                 |
+	// | deductedAmount  | string | Numeric (uint64)                         | Only find logs in the deducted amount range.       |
+	// | remainingAmount | string | Numeric (int64)                          | Only find logs in the remaining amount range.      |
 	//
 	// ### Pagination
 	//
@@ -495,15 +507,24 @@ type ArchiveQueryServiceServer interface {
 	//
 	// #### Include filter properties
 	//
-	// | Name            |  Type   | Format   | Description                                             |
-	// |-----------------|--------|-----------|---------------------------------------------------------|
-	// | source          | string | 60 character identity, up to 5 | The source identity. (conditional) |
-	// | destination     | string | 60 character identity, up to 5 | The destination identity. (conditional) |
-	// | transactionHash | string | Hash     | Hash of the related transaction. (conditional)           |
-	// | tickNumber      | string | Numeric  | The tick the log belongs to. (universal)                 |
-	// | logId           | string | Numeric  | Index of the log within the tick. Should be unique per epoch. (universal) |
-	// | logType         | string | Numeric, up to 5 | The type of the log. (universal)                 |
-	// | categories      | string | Numeric, up to 5 | Log category. (conditional)                      |
+	// | Name                  |  Type  |  Format                        | Description                                                               |
+	// |-----------------------|--------|--------------------------------|---------------------------------------------------------------------------|
+	// | source                | string | 60 character identity, up to 5 | The source identity. (conditional)                                        |
+	// | destination           | string | 60 character identity, up to 5 | The destination identity. (conditional)                                   |
+	// | transactionHash       | string | Hash                           | Hash of the related transaction. (conditional)                            |
+	// | tickNumber            | string | Numeric                        | The tick the log belongs to. (universal)                                  |
+	// | logId                 | string | Numeric                        | Index of the log within the tick. Should be unique per epoch. (universal) |
+	// | logType               | string | Numeric, up to 5               | The type of the log. (universal)                                          |
+	// | categories            | string | Numeric, up to 5               | Log category. (conditional)                                               |
+	// | epoch                 | string | Numeric (uint32)               | The epoch. (universal)                                                    |
+	// | assetName             | string | String, max 7 chars            | Name of the asset. (conditional)                                          |
+	// | assetIssuer           | string | 60 character identity          | Issuer of the asset. (conditional)                                        |
+	// | managingContractIndex | string | Numeric (uint64)               | Managing contract index. (conditional)                                    |
+	// | contractIndex         | string | Numeric (uint64)               | Contract index. (conditional)                                             |
+	// | contractMessageType   | string | Numeric (uint64)               | Contract message type. (conditional)                                      |
+	// | deductedAmount        | string | Numeric (uint64)               | Deducted amount. (conditional)                                            |
+	// | remainingAmount       | string | Numeric (int64)                | Remaining amount. (conditional)                                           |
+	// | customMessage         | string | Numeric (uint64)               | Custom message. (conditional)                                             |
 	//
 	// The following categories are theoretically supported at the moment. Not all are available in the archive.
 	// See log data consumer code for more details:
@@ -546,12 +567,15 @@ type ArchiveQueryServiceServer interface {
 	//
 	// Ranges restrict the results to a range of values by defining a maximum and/or minimum value.
 	//
-	// | Name       | Type   | Format                                   | Description                                 |
-	// |------------|--------|------------------------------------------|---------------------------------------------|
-	// | amount     | string | Numeric                                  | Only find logs in the amount range.     |
-	// | numberOfShares | string | Numeric                              | Only find logs withing the number of shares range. |
-	// | tickNumber | string | Numeric                                  | Only find logs in the tick range.       |
-	// | timestamp  | string | Numeric (Unix Timestamp in milliseconds) | Only find logs in the time range.       |
+	// | Name            | Type   | Format                                   | Description                                        |
+	// |-----------------|--------|------------------------------------------|----------------------------------------------------|
+	// | amount          | string | Numeric                                  | Only find logs in the amount range.                |
+	// | numberOfShares  | string | Numeric                                  | Only find logs withing the number of shares range. |
+	// | tickNumber      | string | Numeric                                  | Only find logs in the tick range.                  |
+	// | timestamp       | string | Numeric (Unix Timestamp in milliseconds) | Only find logs in the time range.                  |
+	// | epoch           | string | Numeric (uint32)                         | Only find logs in the epoch range.                 |
+	// | deductedAmount  | string | Numeric (uint64)                         | Only find logs in the deducted amount range.       |
+	// | remainingAmount | string | Numeric (int64)                          | Only find logs in the remaining amount range.      |
 	//
 	// ### Pagination
 	//
